examples/neg/synthesized_else.effekt
def foo(): Option[Int] = if (true) Some(42) // ERROR Cannot merge different constructors

def main() = ()